--- a/src/style.css
+++ b/src/style.css
@@ -1,42 +1,94 @@
-body{
-    background: url("https://wallpaperaccess.com/full/331622.jpg"); 
-    background-size: 110%;
-    animation: movimiento 30s infinite linear alternate;
-    position:relative;
-    bottom:50px;
-  
-  
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
-#up-btn{
-    margin: auto;   
-    position:relative;
-    left:100px;
-    top:7px; 
-    bottom: px;
-}
+  
+  body {
+    height: 100vh;
+    display: flex;
+    background-image: url("https://wallpaperaccess.com/full/2720432.jpg");
+    animation: movimiento 30s infinite linear alternate;
 
-fieldset{
-    position:relative;
-  left:680px;
-  top:700px;
-  width:400px;
-  height:500px;
-}
+    
+    background-size: cover;
+  }
 
+  @keyframes movimiento{
+    from{
+      background-position: bottom left;
+    }
+    to{
+      background-position: top right;
+    }
+    }
+  
+  audio { 
+    width: 160px; 
+    box-shadow: 5px 5px 20px rgba(0,0, 0, 0.4);
+    border-radius: 90px;
+    transform: scale(1.05);
+    
+  }
+  
+  .memory-game {
+    position: relative;
+    left: 200px;
+    width: 680px;
+    height: 680px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    perspective: 1000px;
+  }
+  
+  .memory-card {
+    width: calc(28% - 60px);
+    height: calc(28% - 60px);
+    margin: 3px;
+    position: relative;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    cursor: pointer;
+  }
+  
+  .memory-card:active { 
+    transform: scale(0.97);
+    transition: transform .2s;
+  }
+  
+  .memory-card.flip {
+    transform: rotateY(180deg);
+  }
+  
+  .front-face,
+  .back-face {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: #1C7CCC;
+    backface-visibility: hidden;
+  }
+  
+  .front-face {
+    transform: rotateY(180deg);
+  }
 
-
-#start{
-    padding: 2rem;
-    font-size: 20;
-    font-family: 'Courier New', Courier, monospace;
-    letter-spacing: 2;
-    border-radius: 1rem;
-    background-color: blueviolet;
-    border-radius:2px;
-    border:none;
-    cursor:pointer;
-    font-family: sans-serif;
-    font-size:15px;
-    padding:12px 20px;
-    bottom: 200px;
-}
+  .results{
+    background-color: rgba(rgb(32, 63, 164), green, blue, alpha);
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    width: 250px;
+    height: 400px;
+  }
+  .marker{
+    border: 1px solid white;
+    height: 105px;
+    border-radius: 8px;
+    padding: 8px 20px;
+    box-sizing: border-box;
+  }
