--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,9 @@
   color: #e4e7ee;
 }
 .frontimg{
-  width: 170px;
-  height: 170px;
+  width: 150px;
+  height: 150px;
+  border-radius: 15ch;
 }
 .container{
   display: grid;
@@ -32,7 +33,9 @@
   bottom: 100px;
   perspective: 1000px;
   cursor: pointer;
+  grid-gap: 2ch;
 }
+  
 .boton{
   position: relative; 
   top: 250px;
@@ -48,6 +51,7 @@
 }
 .ayuda {
   font-family: 'Dancing Script', cursive;
+  font-size: 40ch;
   text-align: center;
   vertical-align: bottom;
   height: 10%;
@@ -60,11 +64,13 @@
 }
 .musica { 
   position: relative;
-  left: px;
-  width: 160px; 
+  width: 200px; 
   box-shadow: 5px 5px 20px rgba(0,0, 0, 0.4);
-  border-radius: 90px;
+  border-radius: 50px;
   transform: scale(1.05);  
+  color: darkblue !important;
 }
-
+.toggleCard {
+  transform: rotateY(180deg);
+}
 
