--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
   background-size: cover;
   height: 100vh;
   animation: movimiento 10s infinite linear alternate;
+  
 
 }
 @keyframes movimiento {
@@ -40,7 +41,7 @@
   padding:20px 40px;
   cursor:pointer;
   background-color: transparent;
-  font-family: 'Inspiration', cursive;
+  font-family: fantasy;
   border-radius: 10px;
   font-size: 3ch;
   box-shadow: inset 0px 0px 0px 0px #dcecfb;
@@ -56,7 +57,24 @@
   transform: scale(1.05);  
   color: darkblue !important;
 }
-.toggleCard {
-  transform: rotateY(180deg);
+.popup {
+  width: 50%;
+  height: 160%;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(50px);
+  top: calc(40% - 50px);
+  left: calc(25% - 30px);
+  margin: 20px;
+  padding: 30px;
+  border-radius: 20px;
+  box-shadow: 0 5px 25px rgb(0 0 0 / 20%);
+  border: none;
+  font-family: fantasy;
+  z-index: 2;
 }
-
+.modal::backdrop{
+  background: rgba(220, 211, 211, 0.6);
+}
+.boton2{
+  font-family: fantasy;
+}
