--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,7 @@
   background-size: cover;
   height: 100vh;
   animation: movimiento 10s infinite linear alternate;
-  
-
+  font-family: fantasy;
 }
 @keyframes movimiento {
   from{
@@ -27,7 +26,7 @@
   width: 15%;
   position: relative;
   left: 500px;
-  bottom: 100px;
+  bottom: 180px;
   perspective: 1000px;
   cursor: pointer;
   grid-gap: 2ch;
@@ -38,12 +37,11 @@
   top: 250px;
 }
 .instrucciones{
-  padding:20px 40px;
+  padding:20px 35px;
   cursor:pointer;
-  background-color: transparent;
   font-family: fantasy;
   border-radius: 10px;
-  font-size: 3ch;
+  font-size: 2ch;
   box-shadow: inset 0px 0px 0px 0px #dcecfb;
 }
 .instrucciones:hover{
